# clustering

./: README.md  pyproject.toml
notebooks/: Untitled.ipynb  subtractive.ipynb
notebooks/dataset/: BERT.ipynb  word2vec.ipynb
notebooks/dev/: Mountain-jax.ipynb  Mountain.ipynb  Untitled1.ipynb  demo.ipynb  kmeans-demo.ipynb  substractive-demo.ipynb
notebooks/experiments/: TNSE.ipynb  TSNE.ipynb  kmeans-clusters.ipynb  mountain-tpu.ipynb  substractive-clusters.ipynb
repr/: .gitattributes
repr/transformers/: bert-base-uncased_test.npy  bert-base-uncased_validation.npy  roberta-base_test.npy  roberta-base_validation.npy
repr/word2vec/: en_core_web_lg_test.npy  en_core_web_lg_validation.npy  en_core_web_md_test.npy  en_core_web_md_validation.npy  en_core_web_sm_test.npy  en_core_web_sm_train.npy  en_core_web_sm_validation.npy
src/: __init__.py  _fuzzy.py  _kmeans.py  _kprototypes.py  _mountain.py  _substractive.py  utils.py
