[tool.poetry]
name = "clustering"
version = "0.1.0"
description = ""
authors = ["Santiago <shpotes3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
matplotlib = "^3.3.1"
scikit-learn = "^0.23.2"
mypy = "^0.782"
jax = "^0.1.75"
jaxlib = "^0.1.52"
pandas = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
jupyterlab = "^2.2.6"
hypothesis = "^5.30.0"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
